// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitReact snapshots > async module (async throws function) 1`] = `
"==== app/net.ts (module: app.net) ====
// Generated by ClearKrypt 0.1.0 from src/net.ck (module app.net).
// Do not edit. Changes will be overwritten.

import type { ID } from '../clearkrypt';

export interface RemoteUser {
  readonly id: ID;
  readonly name: string;
}

export type NetworkError =
  | { kind: 'timeout' }
  | { kind: 'server'; message: string };

/**
 * @throws {NetworkError}
 */
export async function fetchUser(id: ID): Promise<RemoteUser> {
  return { id, name: "Remote" };
}

==== clearkrypt.ts (module: clearkrypt) ====
// Generated by ClearKrypt 0.1.0. Shared support definitions.
// Do not edit. Changes will be overwritten.

export type ID = string;
export type Email = string;
export type URL = string;
export type Decimal = string;
"
`;

exports[`emitReact snapshots > cross module project 1`] = `
"==== app/api.ts (module: app.api) ====
// Generated by ClearKrypt 0.1.0 from src/api.ck (module app.api).
// Do not edit. Changes will be overwritten.

import type { User } from './models';

export function welcome(user: User): string {
  return "Welcome, " + user.name;
}

==== app/models.ts (module: app.models) ====
// Generated by ClearKrypt 0.1.0 from src/models.ck (module app.models).
// Do not edit. Changes will be overwritten.

import type { ID } from '../clearkrypt';

export interface User {
  readonly id: ID;
  readonly name: string;
}

==== clearkrypt.ts (module: clearkrypt) ====
// Generated by ClearKrypt 0.1.0. Shared support definitions.
// Do not edit. Changes will be overwritten.

export type ID = string;
export type Email = string;
export type URL = string;
export type Decimal = string;
"
`;

exports[`emitReact snapshots > functions module (expressions, if/else, let) 1`] = `
"==== app/text.ts (module: app.text) ====
// Generated by ClearKrypt 0.1.0 from src/text.ck (module app.text).
// Do not edit. Changes will be overwritten.

export function fullName(first: string, last: string): string {
  return first + " " + last;
}

export function larger(a: number, b: number): number {
  if (a > b) {
    return a;
  } else {
    return b;
  }
}

export function describeCount(count: number): string {
  const label = "items";
  if (count === 1) {
    return "1 item";
  }
  return "many " + label;
}

==== clearkrypt.ts (module: clearkrypt) ====
// Generated by ClearKrypt 0.1.0. Shared support definitions.
// Do not edit. Changes will be overwritten.

export type ID = string;
export type Email = string;
export type URL = string;
export type Decimal = string;
"
`;

exports[`emitReact snapshots > hello world module 1`] = `
"==== app/main.ts (module: app.main) ====
// Generated by ClearKrypt 0.1.0 from src/main.ck (module app.main).
// Do not edit. Changes will be overwritten.

import type { ID } from '../clearkrypt';

export interface Greeting {
  readonly id: ID;
  readonly message: string;
  readonly isFriendly: boolean;
}

export function createGreeting(init: {
  readonly id: ID;
  readonly message: string;
  readonly isFriendly?: boolean;
}): Greeting {
  return {
    id: init.id,
    message: init.message,
    isFriendly: init.isFriendly ?? true,
  };
}

export function greetingText(greeting: Greeting): string {
  return greeting.message;
}

export function friendlyGreeting(message: string): Greeting {
  return createGreeting({ id: "greeting-1", message });
}

==== clearkrypt.ts (module: clearkrypt) ====
// Generated by ClearKrypt 0.1.0. Shared support definitions.
// Do not edit. Changes will be overwritten.

export type ID = string;
export type Email = string;
export type URL = string;
export type Decimal = string;
"
`;

exports[`emitReact snapshots > types project (kitchen sink model, enums, error) 1`] = `
"==== app/models.ts (module: app.models) ====
// Generated by ClearKrypt 0.1.0 from src/models.ck (module app.models).
// Do not edit. Changes will be overwritten.

import type { Decimal, Email, ID, URL } from '../clearkrypt';

export interface Profile {
  readonly id: ID;
  readonly name: string;
  readonly email: Email;
  readonly age: number;
  readonly rating: number;
  readonly balance: Decimal;
  readonly birthday: string;
  readonly createdAt: string;
  readonly avatarUrl: URL | null;
  readonly thumbnail: Uint8Array;
  readonly tags: ReadonlySet<string>;
  readonly scores: readonly number[];
  readonly attributes: ReadonlyMap<string, string>;
  readonly isActive: boolean;
}

export function createProfile(init: {
  readonly id: ID;
  readonly name: string;
  readonly email: Email;
  readonly age: number;
  readonly rating: number;
  readonly balance: Decimal;
  readonly birthday: string;
  readonly createdAt: string;
  readonly avatarUrl: URL | null;
  readonly thumbnail: Uint8Array;
  readonly tags: ReadonlySet<string>;
  readonly scores: readonly number[];
  readonly attributes: ReadonlyMap<string, string>;
  readonly isActive?: boolean;
}): Profile {
  return {
    id: init.id,
    name: init.name,
    email: init.email,
    age: init.age,
    rating: init.rating,
    balance: init.balance,
    birthday: init.birthday,
    createdAt: init.createdAt,
    avatarUrl: init.avatarUrl,
    thumbnail: init.thumbnail,
    tags: init.tags,
    scores: init.scores,
    attributes: init.attributes,
    isActive: init.isActive ?? true,
  };
}

export type OrderStatus = 'pending' | 'shipped' | 'delivered';

export type BookingStatus =
  | { kind: 'pending' }
  | { kind: 'confirmed' }
  | { kind: 'cancelled'; reason: string }
  | { kind: 'completed' };

export type AuthError =
  | { kind: 'invalidCredentials' }
  | { kind: 'lockedOut'; until: string }
  | { kind: 'network'; message: string };

==== clearkrypt.ts (module: clearkrypt) ====
// Generated by ClearKrypt 0.1.0. Shared support definitions.
// Do not edit. Changes will be overwritten.

export type ID = string;
export type Email = string;
export type URL = string;
export type Decimal = string;
"
`;
